2008-10-06  Jan Nijtmans  <nijtmans@users.sf.net>

	* tclWinTest.c: Fix compiler warning when compiling this file with mingw gcc:
    tclWinTest.c:706: warning: dereferencing type-punned pointer will break
    strict-aliasing rules
	* generic/tclLoad.c: Make sure that any library which doesn't have an
	unloadproc is only really unloaded when no library code is executed
	yet. [Bug 2059262]

2008-10-06  Joe Mistachkin  <joe@mistachkin.com>

	* tools/man2tcl.c: Added missing line from patch by Harald Oehlmann.
	[Bug 1934200]

2008-10-05  Kevin B, Kenny  <kennykb@acm.org>

	* libtommath/bn_mp_sqrt.c (bn_mp_sqrt): Handle the case where
	* tests/expr.test (expr-47.13):         a number's square root
	is between n<<DIGIT_BIT and n<<DIGIT_BIT+1. [Bug 2143288]
	Thanks to Malcolm Boffey (malcolm.boffey@virgin.net) for
	the patch.
	
2008-10-02  Joe Mistachkin  <joe@mistachkin.com>

	* tools/man2help2.tcl: Integrated patches from Harald Oehlmann.
	* tools/man2tcl.c: [Bug 1934200, 1934272]

2008-09-27  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclCmdIL.c (Tcl_LrepeatObjCmd): Improve the handling of the
	case where the combination of number of elements and repeat count
	causes the resulting list to be too large. [Bug 2130992]

2008-09-25  Don Porter	<dgp@users.sourceforge.net>

	* doc/global.n:	Correct false claim about [info locals].

2008-09-17  Don Porter	<dgp@users.sourceforge.net>

	* generic/tclInt.h:     Correct the TclGetLongFromObj,
	TclGetIntFromObj, and TclGetIntForIndexM macros so that they
	retrieve the internalRep.longValue field instead of casting the
	internalRep.otherValuePtr field to type long.

2008-09-17  Miguel Sofer  <msofer@users.sf.net>

	* library/init.tcl: export min and max commands from the mathfunc
	namespace [Bug 2116053]

2008-09-10  Donal K. Fellows  <donal.k.fellows@man.ac.uk>

	* generic/tclListObj.c (Tcl_ListObjGetElements): Make this list->dict
	transformation - encountered when using [foreach] with dicts - not as